--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "idna==3.11",
     "iniconfig==2.3.0",
     "mutagen==1.47.0",
+    "notion-client>=2.7.0",
     "packaging==25.0",
     "playwright==1.57.0",
     "pluggy==1.6.0",
